--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon-x512" />
+    <link rel="shortcut icon" type="image/ico" href="/assets/icon-x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lsmith</title>
   </head>
