use named export

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" type="image/ico" href="./assets/icon-x512.png" />
+  <link rel="shortcut icon" type="image/ico" href="./assets/icon-x1024.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lsmith</title>
+  <title>Radiata - StableDiffusionWebUI</title>
 </head>
 
 <body>
